--- a/1_VibrationAnalysis-Time_Domain_vs_Frequency_Domain.ipynb
+++ b/1_VibrationAnalysis-Time_Domain_vs_Frequency_Domain.ipynb
@@ -18,6 +18,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![](https://www.nti-audio.com/portals/0/pic/news/FFT-Time-Frequency-View-540.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# <font color=\"gree\">Domínio do Tempo</font>"
    ]
   },
