Imagem de sinais de vibração

--- a/2_VibrationAnalysis-Global_Data_or_Global_Metrics.ipynb
+++ b/2_VibrationAnalysis-Global_Data_or_Global_Metrics.ipynb
@@ -18,6 +18,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![](https://i.ytimg.com/vi/K1Vnyts3DRE/maxresdefault.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# <font color=\"gree\">Dados Globais</font>"
    ]
   },
