Estudo finalizado sobre Desbalanceamento

--- a/3_VibrationAnalysis-Unbalance.ipynb
+++ b/3_VibrationAnalysis-Unbalance.ipynb
@@ -113,37 +113,66 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ele promove a geração de `forças centrífugas`, decorrentes da distribuição irregular de massa, que serão transmitidas aos mancais. Essa carga imposta aos mancais poderá fazer com que componentes sejam danificados, diminuindo a vida útil do equipamento.\n",
+    "\n",
+    "Existem alguns tipos, caracterizados a partir da análise dos vetores das forças de reação nos mancais, que vamos abordar a seguir:\n",
+    "\n",
+    "\n",
+    "* <font color=\"red\">Estático</font>\n",
+    "\n",
+    "O `eixo principal de inércia` e o eixo ao redor do qual a máquina está rotacionando estão `paralelos, mas não coincidem`.\n",
+    "\n",
+    "![](https://bimgix.tractian.com/desbalanceamento-estatico-TRACTIAN.png)\n",
+    "\n",
+    "\n",
+    "\n",
+    "* <font color=\"red\">Conjugado</font>\n",
+    "\n",
+    "O `eixo principal de inércia` não está paralelo ao eixo de rotação, entretanto os dois se intersectam no centro de gravidade do rotor.\n",
+    "\n",
+    "![](https://bimgix.tractian.com/desbalanceamento-conjugado-TRACTIAN.png)\n",
+    "\n",
+    "\n",
+    "\n",
+    "* <font color=\"red\">Dinâmico</font>\n",
+    "\n",
+    "Este tipo é considerado uma combinação dos dois tipos anteriores, em que o eixo principal de inércia e o eixo de rotação não estão paralelos nem se intersectam no centro de gravidade do rotor.\n",
+    "\n",
+    "![](https://bimgix.tractian.com/desbalanceamento-dinamico-TRACTIAN.png)\n",
+    "\n"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`No espectro de vibração conseguimos detectar na forma de um pico, com valor de frequência igual ao da frequência de rotação do eixo.` Isso porque o principal sintoma está relacionado às vibrações elevadas na direção `radial`, com a componente `1N` sendo a mais significativa.\n",
+    "\n",
+    "As frequências múltiplas de `1N` não apresentam amplitude considerável e é importante ressaltar que a amplitude da componente `1N` aumenta com o aumento da velocidade de rotação. `Além disso, ele não acarreta em vibrações elevadas na direção axial, apenas na radial.`\n",
+    "\n",
+    "\n",
+    "<img src=\"https://bimgix.tractian.com/grafico-frequencia-amplitude-desbalanceamento-TRACTIAN.png\" alt=\"Desbalanceamento\" width=\"700\"/>\n"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color=\"red\">OBS.:</font> A notação `1N`, `2N`, `3N`, `4N`, . . . , etc., é utilizada de maneira análoga à notação `1X`, `2X`, `3X`, `4X`, . . . , etc., para representar múltiplos da velocidade de rotação da máquina (sendo `N = frequência de rotação do eixo`).\n",
+    "\n",
+    "A seguir, um exemplo real detectado pelo sistema de monitoramento online `TRACTIAN` e como a plataforma interpreta o espectro, avisando ao manutentor instantaneamente.\n",
+    "\n",
+    "<font color=\"yellow\">É possível observar no espectro, que a amplitude da componente 1N (em rosa) ultrapassou consideravelmente a linha limite estipulada para o comportamento vibratório normal, o que configura um desbalanceamento. Nesse momento o insight foi gerado e enviado alerta para o usuário.</font>\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "<img src=\"https://bimgix.tractian.com/print-de-um-desbalanceamento-detectado-pela-plataforma-TRACTIAN.png\" alt=\"Desbalanceamento no Espectro\" width=\"1400\" height=\"700\"/>\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
