Estudando o Desalinhamento de Ativos

--- a/3_VibrationAnalysis-Unbalance.ipynb
+++ b/3_VibrationAnalysis-Unbalance.ipynb
@@ -291,7 +291,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <font color=\"gree\">Desalinhamento</font>"
+    "# <font color=\"gree\">Desalinhamento (`Misalignment`)</font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "O `desalinhamento` nas máquinas ocorre quando as linhas de centro dos eixos de rotação de duas, ou mais, máquinas acopladas não coincidem uma com a outra, ou seja, `os componentes não estão nivelados com o centro`. Isso acontece devido ao mau alinhamento entre as peças, e é considerado a segunda fonte de [vibração](https://tractian.com/blog/analise-de-vibracoes?ref=tractian-1.ghost.io) que mais prevalece.\n",
+    "\n",
+    "O desalinhamento pode se apresentar de três formas: paralelo, angular ou combinado:\n",
+    "\n",
+    "* `Desalinhamento paralelo ou radial:` o próprio nome diz, ocorre quando as linhas de centro se apresentam de forma paralela;\n",
+    "\n",
+    "\n",
+    "\n",
+    "* `Desalinhamento angular ou axial:` a irregularidade é mostrada a partir de ângulo formado, entre as linhas centrais;\n",
+    "\n",
+    "\n",
+    "\n",
+    "* `Desalinhamento combinado:` é a mais comum entre as outras, há desvios paralelos e angulares nas linhas do centro.\n",
+    "\n",
+    "![](https://bimgix.tractian.com/tipod-de-desalinhamento-TRACTIAN.png)"
    ]
   },
   {
